--- a/package.json
+++ b/package.json
@@ -1,58 +1,65 @@
 {
-  "name": "uniswap-io",
-  "description": "Uniswap documentation site",
-  "version": "0.0.1",
-  "author": "Callil Capuozzo",
-  "bugs": {
-    "url": "https://github.com/uniswap"
-  },
+  "name": "gatsby-starter-default",
+  "private": true,
+  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "version": "0.1.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "docz": "^2.2.0",
-    "docz-theme-default": "1.0.3",
-    "gatsby": "^2.18.17",
-    "gatsby-image": "^2.0.39",
-    "gatsby-plugin-offline": "^2.0.25",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.34",
-    "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-remark-copy-linked-files": "^2.0.11",
-    "gatsby-remark-images": "^3.0.10",
-    "gatsby-remark-prismjs": "^3.2.8",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "^2.0.29",
-    "gatsby-theme-docz": "^2.2.0",
-    "gatsby-transformer-remark": "^2.3.8",
-    "gatsby-transformer-sharp": "^2.1.18",
-    "prismjs": "^1.16.0",
+    "@mdx-js/mdx": "^1.5.3",
+    "@mdx-js/react": "^1.5.3",
+    "babel-plugin-styled-components": "^1.10.6",
+    "gatsby": "^2.18.12",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-offline": "^3.0.27",
+    "gatsby-plugin-page-creator": "^2.1.37",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-remark-autolink-headers": "^2.1.22",
+    "gatsby-remark-code-buttons": "^2.0.4",
+    "gatsby-remark-copy-linked-files": "^2.1.33",
+    "gatsby-remark-images": "^3.1.39",
+    "gatsby-remark-prismjs": "^3.3.29",
+    "gatsby-remark-responsive-iframe": "^2.2.30",
+    "gatsby-remark-smartypants": "^2.1.19",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-transformer-remark": "^2.6.45",
+    "gatsby-transformer-sharp": "^2.3.7",
+    "mdx-utils": "^0.2.0",
+    "prism-react-renderer": "^1.0.2",
+    "prismjs": "^1.18.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.19",
-    "rebass": "^3.1.0",
-    "styled-components": "^4.2.0",
-    "typeface-source-sans-pro": "^0.0.54",
-    "typography": "^0.16.19",
-    "typography-theme-fairy-gates": "^0.16.19"
+    "react-helmet": "^5.2.1",
+    "react-live": "^2.2.2",
+    "remark-git-contributors": "^2.0.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
-    "prettier": "^1.17.0"
+    "prettier": "^1.19.1"
   },
-  "homepage": "https://github.com/pedronauck/gatsby-starter-docz#readme",
   "keywords": [
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pedronauck/gatsby-starter-docz.git"
-  },
   "scripts": {
+    "dev": "gatsby develop",
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
