fix import error in docs_template

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "engines": { "node": "12.x" },
+  "engines": {
+    "node": "10.x"
+  },
   "dependencies": {
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
