--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
+    "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-transition-link": "^1.17.7",
+    "gatsby-plugin-transitions": "^2.1.6",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-copy-linked-files": "^2.1.33",
@@ -30,6 +34,8 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.7",
+    "github-slugger": "^1.2.1",
+    "gsap": "^3.0.5",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.18.0",
@@ -37,9 +43,13 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-intersection-observer": "^8.25.2",
     "react-live": "^2.2.2",
+    "react-spring": "^8.0.27",
+    "remark-external-links": "^5.0.0",
     "remark-git-contributors": "^2.0.1",
-    "styled-components": "^4.4.1"
+    "remark-github": "^8.0.0",
+    "styled-components": "^5.0.0-rc.3"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
