--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
+    "gatsby-plugin-page-progress": "^2.0.14",
     "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-scroll-indicator": "^0.1.4",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-plugin-transitions": "^2.1.6",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-code-buttons": "^2.0.4",
+    "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.33",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-remark-prismjs": "^3.3.29",
@@ -41,6 +45,7 @@
     "prismjs": "^1.18.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-collapsible": "^2.6.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.25.2",
