Add lunr search and some search UI

--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "node": "10.x"
   },
   "dependencies": {
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
+    "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
+    "elasticlunr": "^0.9.5",
+    "formik": "^2.1.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-algolia": "^0.5.0",
+    "gatsby-plugin-flexsearch": "^1.0.3",
     "gatsby-plugin-layout": "^1.1.21",
+    "gatsby-plugin-local-search": "^1.0.0",
+    "gatsby-plugin-lunr": "^1.5.2",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-mdx": "^1.0.64",
     "gatsby-plugin-offline": "^3.0.27",
@@ -48,12 +56,17 @@
     "react-collapsible": "^2.6.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.1.0",
     "react-intersection-observer": "^8.25.2",
     "react-live": "^2.2.2",
+    "react-lunr": "^0.6.0",
     "react-spring": "^8.0.27",
+    "react-use-flexsearch": "^0.1.1",
+    "remark": "^11.0.2",
     "remark-external-links": "^5.0.0",
     "remark-git-contributors": "^2.0.1",
     "remark-github": "^8.0.0",
+    "strip-markdown": "^3.1.1",
     "styled-components": "^5.0.0-rc.3"
   },
   "devDependencies": {
