--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
     "node": "10.x"
   },
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "@mdx-js/mdx": "^1.5.3",
     "@mdx-js/react": "^1.5.3",
-    "algoliasearch": "^3.35.1",
     "babel-plugin-styled-components": "^1.10.6",
-    "elasticlunr": "^0.9.5",
     "formik": "^2.1.1",
     "gatsby": "^2.18.12",
     "gatsby-image": "^2.2.34",
-    "gatsby-plugin-algolia": "^0.5.0",
-    "gatsby-plugin-flexsearch": "^1.0.3",
     "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-local-search": "^1.0.0",
     "gatsby-plugin-lunr": "^1.5.2",
@@ -27,47 +22,35 @@
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
     "gatsby-plugin-page-progress": "^2.0.14",
-    "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-scroll-indicator": "^0.1.4",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-plugin-transition-link": "^1.17.7",
-    "gatsby-plugin-transitions": "^2.1.6",
     "gatsby-remark-autolink-headers": "^2.1.22",
-    "gatsby-remark-code-buttons": "^2.0.4",
-    "gatsby-remark-code-titles": "^1.1.0",
-    "gatsby-remark-copy-linked-files": "^2.1.33",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-remark-prismjs": "^3.3.29",
     "gatsby-remark-responsive-iframe": "^2.2.30",
     "gatsby-remark-smartypants": "^2.1.19",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
-    "gsap": "^3.0.5",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.18.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.8",
     "react-collapsible": "^2.6.2",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.8",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.1.0",
-    "react-intersection-observer": "^8.25.2",
+    "react-is": "^16.8",
     "react-live": "^2.2.2",
     "react-lunr": "^0.6.0",
     "react-spring": "^8.0.27",
-    "react-use-flexsearch": "^0.1.1",
     "remark": "^11.0.2",
-    "remark-external-links": "^5.0.0",
-    "remark-git-contributors": "^2.0.1",
-    "remark-github": "^8.0.0",
     "strip-markdown": "^3.1.1",
-    "styled-components": "^5.0.0-rc.3"
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
