--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-live": "^2.2.2",
     "react-lunr": "^0.6.0",
     "react-spring": "^8.0.27",
+    "react-tilt": "^0.1.4",
     "remark": "^11.0.2",
     "strip-markdown": "^3.1.1",
     "styled-components": "^5.0.0"
