--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.1.1",
     "framer-motion": "^1.7.0",
     "gatsby": "^2.18.12",
+    "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-local-search": "^1.0.0",
@@ -36,6 +37,8 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
+    "matter-attractors": "^0.1.6",
+    "matter-js": "^0.14.2",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.18.0",
