--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Uniswap-site-v2",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Uniswap homepage and knowledgebase",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Callil Capuozzo <callil.capuozzo@gmail.com>",
   "engines": {
     "node": "10.x"
   },
@@ -12,7 +12,6 @@
     "@mdx-js/react": "^1.5.3",
     "babel-plugin-styled-components": "^1.10.6",
     "formik": "^2.1.1",
-    "framer-motion": "^1.7.0",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
@@ -52,7 +51,6 @@
     "react-live": "^2.2.2",
     "react-lunr": "^0.6.0",
     "react-spring": "^8.0.27",
-    "react-tilt": "^0.1.4",
     "remark": "^11.0.2",
     "strip-markdown": "^3.1.1",
     "styled-components": "^5.0.0"
