--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "node": "10.x"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.3",
-    "@mdx-js/react": "^1.5.3",
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
     "babel-plugin-styled-components": "^1.10.6",
     "formik": "^2.1.1",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-instagram-embed": "^1.1.0",
     "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-local-search": "^1.0.0",
     "gatsby-plugin-lunr": "^1.5.2",
     "gatsby-plugin-manifest": "^2.2.31",
-    "gatsby-plugin-mdx": "^1.0.64",
+    "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
     "gatsby-plugin-page-progress": "^2.0.14",
@@ -28,10 +29,13 @@
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-styled-components": "^3.1.16",
+    "gatsby-plugin-twitter": "^2.1.19",
     "gatsby-remark-autolink-headers": "^2.1.22",
     "gatsby-remark-copy-linked-files": "^2.1.37",
+    "gatsby-remark-embedder": "^1.11.2",
     "gatsby-remark-images": "^3.1.39",
     "gatsby-remark-prismjs": "^3.3.29",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.2.30",
     "gatsby-remark-smartypants": "^2.1.19",
     "gatsby-source-filesystem": "^2.1.40",
@@ -51,6 +55,8 @@
     "react-is": "^16.8",
     "react-live": "^2.2.2",
     "react-lunr": "^0.6.0",
+    "react-moment": "^0.9.7",
+    "react-social-sharing": "^3.0.1",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.3.0",
     "react-typist": "^2.0.5",
