Add toggle menu

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
+    "@react-hook/media-query": "^1.0.1",
     "babel-plugin-styled-components": "^1.10.6",
     "formik": "^2.1.1",
     "gatsby": "^2.18.12",
