Add copy code buttons

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "^2.1.19",
     "gatsby-remark-autolink-headers": "^2.1.22",
+    "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-embedder": "^1.11.2",
     "gatsby-remark-images": "^3.1.39",
@@ -54,13 +55,13 @@
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.1.0",
     "react-is": "^16.8",
-    "react-live": "^2.2.2",
     "react-lunr": "^0.6.0",
     "react-moment": "^0.9.7",
     "react-social-sharing": "^3.0.1",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.3.0",
     "react-typist": "^2.0.5",
+    "react-use-clipboard": "1.0.0",
     "remark": "^11.0.2",
     "strip-markdown": "^3.1.1",
     "styled-components": "^5.0.0"
