--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "gatsby-plugin-replace-path": "^1.0.0",
     "prettier": "^1.19.1"
   },
   "keywords": [
