--- a/package.json
+++ b/package.json
@@ -16,18 +16,20 @@
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-instagram-embed": "^1.1.0",
     "gatsby-plugin-layout": "^1.1.21",
     "gatsby-plugin-local-search": "^1.0.0",
     "gatsby-plugin-lunr": "^1.5.2",
-    "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
     "gatsby-plugin-page-progress": "^2.0.14",
-    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-scroll-indicator": "^0.1.4",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "^2.1.19",
@@ -39,7 +41,9 @@
     "gatsby-remark-prismjs": "^3.3.29",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.2.30",
-    "gatsby-remark-smartypants": "^2.1.19",
+    "gatsby-remark-smartypants": "^2.1.21",
+    "gatsby-remark-social-cards": "^0.4.1",
+    "gatsby-remark-twitter-cards": "^0.2.0",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
