--- a/package.json
+++ b/package.json
@@ -14,27 +14,24 @@
     "babel-plugin-styled-components": "^1.10.6",
     "formik": "^2.1.1",
     "gatsby": "^2.18.12",
-    "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-instagram-embed": "^1.1.0",
     "gatsby-plugin-layout": "^1.1.21",
-    "gatsby-plugin-local-search": "^1.0.0",
+    "gatsby-plugin-local-search": "^1.1.0",
     "gatsby-plugin-lunr": "^1.5.2",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
-    "gatsby-plugin-page-progress": "^2.0.14",
     "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-scroll-indicator": "^0.1.4",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-slug-field": "^0.1.0",
     "gatsby-plugin-smoothscroll": "^1.0.4",
     "gatsby-plugin-styled-components": "^3.1.16",
     "gatsby-plugin-twitter": "^2.1.19",
     "gatsby-remark-autolink-headers": "^2.1.22",
-    "gatsby-remark-code-buttons": "^2.0.4",
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-embedder": "^1.11.2",
     "gatsby-remark-images": "^3.1.39",
@@ -42,14 +39,10 @@
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.2.30",
     "gatsby-remark-smartypants": "^2.1.21",
-    "gatsby-remark-social-cards": "^0.4.1",
     "gatsby-remark-twitter-cards": "^0.2.0",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
-    "matter-attractors": "^0.1.6",
-    "matter-js": "^0.14.2",
-    "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.18.0",
     "prop-types": "^15.7.2",
@@ -57,14 +50,10 @@
     "react-collapsible": "^2.6.2",
     "react-dom": "^16.8",
     "react-helmet": "^5.2.1",
-    "react-instantsearch-dom": "^6.1.0",
     "react-is": "^16.8",
     "react-lunr": "^0.6.0",
     "react-moment": "^0.9.7",
     "react-social-sharing": "^3.0.1",
-    "react-spring": "^8.0.27",
-    "react-text-loop": "^2.3.0",
-    "react-typist": "^2.0.5",
     "react-use-clipboard": "1.0.0",
     "remark": "^11.0.2",
     "strip-markdown": "^3.1.1",
@@ -72,7 +61,8 @@
   },
   "devDependencies": {
     "gatsby-plugin-replace-path": "^1.0.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react-scripts": "^3.4.0"
   },
   "keywords": [
     "gatsby"
