Dark mode :smiling_imp:

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-page-creator": "^2.1.37",
     "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.3.5",
     "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-slug-field": "^0.1.0",
@@ -42,6 +43,7 @@
     "gatsby-remark-smartypants": "^2.1.21",
     "gatsby-remark-twitter-cards": "^0.2.0",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-styled-components-dark-mode": "^1.1.0",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
     "prism-react-renderer": "^1.0.2",
