--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
   "parser": "babel-eslint",
   "rules": {
     "strict": 0,
-    "react/prop-types": 0
+    "react/prop-types": "off",
+    "no-unused-vars": "warn"
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
