start to add v2 docs

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-instagram-embed": "^1.1.0",
     "gatsby-plugin-layout": "^1.1.21",
-    "gatsby-plugin-lunr": "^1.5.2",
+    "gatsby-plugin-local-search": "^1.1.1",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-offline": "^3.0.27",
@@ -35,7 +35,7 @@
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-embedder": "^1.11.2",
     "gatsby-remark-images": "^3.1.39",
-    "gatsby-remark-prismjs": "^3.3.29",
+    "gatsby-remark-prismjs": "^3.3.32",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.2.30",
     "gatsby-remark-smartypants": "^2.1.21",
@@ -44,8 +44,9 @@
     "gatsby-styled-components-dark-mode": "^1.1.0",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
+    "lunr": "^2.3.8",
     "prism-react-renderer": "^1.0.2",
-    "prismjs": "^1.18.0",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.8",
     "react-dom": "^16.8",
