--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "node": "10.x"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "@react-hook/media-query": "^1.0.1",
+    "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.10.2",
@@ -46,6 +48,8 @@
     "gatsby-styled-components-dark-mode": "^1.1.0",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
+    "graphql-tag": "^2.10.3",
+    "isomorphic-fetch": "^2.2.1",
     "lunr": "^2.3.8",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.19.0",
