--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Callil Capuozzo <callil.capuozzo@gmail.com>",
   "engines": {
-    "node": "10.x"
+    "node": "12.x"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -14,6 +14,7 @@
     "@react-hook/media-query": "^1.0.1",
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
+    "dayjs": "^1.8.22",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.34",
