--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.26.1",
     "react-moment": "^0.9.7",
+    "react-social-sharing": "^3.0.1",
     "react-use-clipboard": "1.0.0",
     "remark": "^11.0.2",
     "strip-markdown": "^3.1.1",
