--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8",
     "react-dom": "^16.8",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.26.1",
     "react-moment": "^0.9.7",
