--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,21 @@
       }
     }
   ],
+  "headers": [
+    {
+      "source": "/tokenlist\\.schema\\.json",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "max-age=600"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
-      "source": "/tokenlist.schema.json",
-      "destination": "https://unpkg.com/@uniswap/token-lists@1.0.0-beta.1/src/tokenlist.schema.json"
+      "source": "/tokenlist\\.schema\\.json",
+      "destination": "https://unpkg.com/@uniswap/token-lists@1.0.0-beta.2/src/tokenlist.schema.json"
     }
   ]
 }
