--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mdx-js/react": "^1.5.5",
     "@react-hook/media-query": "^1.0.1",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-http": "^1.5.17",
     "babel-plugin-styled-components": "^1.10.7",
     "dayjs": "^1.8.22",
     "gatsby": "^2.18.12",
