--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "@react-hook/media-query": "^1.0.1",
+    "algoliasearch": "^4.3.0",
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "dayjs": "^1.8.22",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.34",
+    "gatsby-plugin-algolia": "^0.11.1",
     "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-instagram-embed": "^1.1.0",
     "gatsby-plugin-layout": "^1.1.21",
@@ -61,6 +64,7 @@
     "react-dom": "^16.8",
     "react-feather": "^2.0.8",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.6.0",
     "react-intersection-observer": "^8.26.1",
     "react-moment": "^0.9.7",
     "react-social-sharing": "^3.0.1",
