--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "gatsby-remark-smartypants": "^2.1.21",
     "gatsby-remark-twitter-cards": "^0.2.0",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-styled-components-dark-mode": "^1.1.0",
     "gatsby-transformer-sharp": "^2.3.7",
     "github-slugger": "^1.2.1",
     "graphql-tag": "^2.10.3",
@@ -73,7 +72,8 @@
     "remark": "^11.0.2",
     "remark-math": "^2.0.1",
     "strip-markdown": "^3.1.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
