--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-algolia": "^0.11.1",
+    "gatsby-plugin-algolia-docsearch": "^1.0.5",
     "gatsby-plugin-feed": "^2.3.27",
     "gatsby-plugin-instagram-embed": "^1.1.0",
     "gatsby-plugin-layout": "^1.1.21",
