--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "index_name": "uniswap_v2_docs",
-  "start_urls": ["http://localhost:8000/docs/v2"],
+  "start_urls": ["https://uniswap-org-git-fork-ianlapham-docs-rework.uniswap.vercel.app/docs/v2"],
   "selectors": {
     "lvl0": "#content header h1",
     "lvl1": "#content article h1",
