remove gatsby plugin for search import, update v1/v1 filter, only import one instance of docsearch

--- a/crawl-config.json
+++ b/crawl-config.json
@@ -2,13 +2,13 @@
   "index_name": "uniswap_v2_docs",
   "start_urls": [
     {
-      "url": "https://uniswap.org/docs/v2",
+      "url": "https://uniswap-org-git-fork-ianlapham-docsearch-styled.uniswap.vercel.app/docs/v2",
       "extra_attributes": {
         "version": ["v2"]
       }
     },
     {
-      "url": "https://uniswap.org/docs/v1",
+      "url": "https://uniswap-org-git-fork-ianlapham-docsearch-styled.uniswap.vercel.app/docs/v1 ",
       "extra_attributes": {
         "version": ["v1"]
       }
