--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniswap-site-v2",
+  "name": "uniswap-org",
   "private": true,
   "description": "Uniswap homepage and knowledgebase",
   "version": "0.1.0",
@@ -19,38 +19,38 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.22.15",
     "gatsby-background-image": "^0.10.2",
-    "gatsby-image": "^2.2.34",
+    "gatsby-image": "^2.4.5",
     "gatsby-plugin-algolia": "^0.11.1",
     "gatsby-plugin-algolia-docsearch-appid": "^0.0.4",
-    "gatsby-plugin-feed": "^2.3.27",
+    "gatsby-plugin-feed": "^2.5.3",
     "gatsby-plugin-instagram-embed": "^1.1.0",
-    "gatsby-plugin-layout": "^1.1.21",
+    "gatsby-plugin-layout": "^1.3.2",
     "gatsby-plugin-local-search": "^1.1.1",
-    "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-mdx": "^1.0.73",
-    "gatsby-plugin-offline": "^3.0.27",
-    "gatsby-plugin-page-creator": "^2.1.37",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-mdx": "^1.2.13",
+    "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-page-creator": "^2.3.7",
     "gatsby-plugin-page-transitions": "^1.0.8",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.3.5",
-    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-plugin-slug-field": "^0.1.0",
-    "gatsby-plugin-smoothscroll": "^1.0.4",
-    "gatsby-plugin-styled-components": "^3.1.19",
-    "gatsby-plugin-twitter": "^2.1.19",
-    "gatsby-remark-autolink-headers": "^2.1.22",
+    "gatsby-plugin-smoothscroll": "^1.1.0",
+    "gatsby-plugin-styled-components": "^3.3.2",
+    "gatsby-plugin-twitter": "^2.3.2",
+    "gatsby-remark-autolink-headers": "^2.3.3",
     "gatsby-remark-check-links": "^2.1.0",
-    "gatsby-remark-copy-linked-files": "^2.1.37",
-    "gatsby-remark-embedder": "^1.11.2",
-    "gatsby-remark-images": "^3.1.39",
-    "gatsby-remark-prismjs": "^3.3.32",
+    "gatsby-remark-copy-linked-files": "^2.3.3",
+    "gatsby-remark-embedder": "^1.16.0",
+    "gatsby-remark-images": "^3.3.8",
+    "gatsby-remark-prismjs": "^3.5.2",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.2.30",
     "gatsby-remark-smartypants": "^2.1.21",
     "gatsby-remark-twitter-cards": "^0.2.0",
-    "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-transformer-sharp": "^2.3.7",
+    "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-transformer-sharp": "^2.5.3",
     "github-slugger": "^1.2.1",
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
