--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
     "remark": "^11.0.2",
     "remark-math": "^2.0.1",
     "strip-markdown": "^3.1.1",
-    "styled-components": "^5.0.1",
-    "use-dark-mode": "^2.3.1"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
