--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uniswap-org",
+  "name": "@uniswap/org",
   "private": true,
   "description": "Uniswap homepage and knowledgebase",
   "version": "0.1.0",
@@ -78,6 +78,7 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@uniswap/token-lists": "^1.0.0-beta.11",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
@@ -98,7 +99,8 @@
     "dev": "gatsby develop",
     "devlocal": "gatsby develop -H 0.0.0.0",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build && yarn post-build",
+    "post-build": "cp ./node_modules/@uniswap/token-lists/src/tokenlist.schema.json public/",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "format": "prettier --write \"src/**/*.{js,jsx,md,mdx}\"",
