--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
     "katex": "^0.11.1",
+    "lodash": "^4.17.20",
     "lunr": "^2.3.8",
     "marquee3000": "^1.1.1",
     "prism-react-renderer": "^1.0.2",
