--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-page-creator": "^2.3.7",
     "gatsby-plugin-page-transitions": "^1.0.8",
+    "gatsby-plugin-postcss": "^3.6.0",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.9",
@@ -60,6 +61,7 @@
     "lodash": "^4.17.20",
     "lunr": "^2.3.8",
     "marquee3000": "^1.1.1",
+    "postcss": "^8.2.4",
     "prism-react-renderer": "^1.0.2",
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
