--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "version": "0.1.0",
   "author": "Callil Capuozzo <callil.capuozzo@gmail.com>",
   "engines": {
-    "node": "12.x"
+    "node": ">=12.0.0"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.11.3",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "@react-hook/media-query": "^1.0.1",
@@ -72,8 +73,10 @@
     "react-instantsearch-dom": "^6.6.0",
     "react-intersection-observer": "^8.26.1",
     "react-moment": "^0.9.7",
+    "react-on-screen": "^2.1.1",
     "react-social-sharing": "^3.0.1",
     "react-use-clipboard": "1.0.0",
+    "rebass": "^4.0.7",
     "rehype-katex": "^3.0.0",
     "remark": "^11.0.2",
     "remark-math": "^2.0.1",
