allow the project to compile on ARM architecture (update sharp)
related to https://github.com/lovell/sharp/issues/2460

--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
     "gatsby-plugin-s3": "^0.3.4",
     "prettier": "^1.19.1"
   },
+  "resolutions": {
+    "sharp": "0.28.0"
+  },
   "keywords": [
     "gatsby"
   ],
